--- a/RecupereJa/Views/Usuario/Registrar.cshtml
+++ b/RecupereJa/Views/Usuario/Registrar.cshtml
@@ -84,7 +84,7 @@
 
         button {
             padding: 10px;
-            background-color: whites;
+            background-color: white;
             color: #0066cc;
             border: none;
             border-radius: 5px;
