--- a/RecupereJa/Views/Usuario/Perfil.cshtml
+++ b/RecupereJa/Views/Usuario/Perfil.cshtml
@@ -30,6 +30,7 @@
                 <a href="/Usuario/Login" class="text-dark text-decoration-none">Login</a>
                 <a href="/Usuario/Perfil" class="text-dark text-decoration-none">Minha conta</a>
                 <a href="/Item" class="text-dark text-decoration-none">Meus itens</a>
+                <a href="/Usuario/Sac" class="text-dark text-decoration-none">Sac</a>
             </div>
         </div>
     </header>
