--- a/RecupereJa/Views/Item/Details.cshtml
+++ b/RecupereJa/Views/Item/Details.cshtml
@@ -3,6 +3,9 @@
 @{
     ViewData["Title"] = "Detalhes";
 }
+<head>
+    <link rel="stylesheet" href="~/css/ItemDetails.css" />
+</head>
 
 <h2>Detalhes do Item</h2>
 
