--- a/RecupereJa/Views/Usuario/Login.cshtml
+++ b/RecupereJa/Views/Usuario/Login.cshtml
@@ -7,11 +7,13 @@
 
 <style>
     body.login-page {
-        background-color: #f5f5f5 !important; /* ou #ffe600 para amarelo estilo Mercado Livre */
+        background-color: #f5f5f5 !important;
+        overflow: hidden;
     }
 
         body.login-page .container {
             max-width: none;
+            height:92vh;
             padding: 0;
         }
 </style>
