--- a/RecupereJa/Views/Usuario/Registrar.cshtml
+++ b/RecupereJa/Views/Usuario/Registrar.cshtml
@@ -28,7 +28,6 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: linear-gradient(to bottom right, #d0eaff, #0077cc);
             filter: blur(10px);
             z-index: -1;
         }
@@ -39,6 +38,7 @@
             justify-content: center;
             min-height: 100vh;
             padding: 40px 20px;
+            background: #f8f9fa;
         }
 
         .container {
